--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "libDaisy"]
 	path = libDaisy
 	url = https://github.com/electro-smith/libDaisy
+[submodule "json2daisy"]
+	path = json2daisy
+	url = git@github.com:garnetgrimm/json2daisy.git
