--- a/json/CMakeLists.txt
+++ b/json/CMakeLists.txt
@@ -3,16 +3,20 @@ project(ccam_json VERSION 1.0.0)
 
 file(GLOB jsonFiles *.json)
 
+set(headerFiles "")
 foreach(file_json ${jsonFiles})
     get_filename_component(file_h ${file_json} NAME_WE)
-    set(file_h "${file_h}.h")
+    set(file_h ${CMAKE_CURRENT_BINARY_DIR}/${file_h}.h)
     add_custom_command(
-            OUTPUT ${CMAKE_CURRENT_SOURCE_DIR}/gen/${file_h}
-            COMMAND $(PYTHONPATH):json2daisy/src python -m json2daisy ${file_json}
-            DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/gen/${file_h}
+            OUTPUT ${file_h}
+            WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}/json2daisy/src"
+            COMMAND python -m json2daisy ${file_json} -o ${file_h}
     )
-    message(${CMAKE_CURRENT_SOURCE_DIR}/${file_h})
+    list(APPEND headerFiles ${file_h})
 endforeach()
 
-string(REGEX REPLACE jsonFiles "[.]json$" ".h" headerFiles ${jsonFiles})
-add_library(board_defs ${headerFiles})
+add_custom_target(board_defs ALL DEPENDS ${headerFiles})
+
+add_library(ccam_json INTERFACE)
+target_include_directories(ccam_json INTERFACE ${CMAKE_BINARY_DIR}/json)
+add_dependencies(ccam_json board_defs)
