--- a/0_kitchen_sink/CMakeLists.txt
+++ b/0_kitchen_sink/CMakeLists.txt
@@ -2,4 +2,9 @@ cmake_minimum_required(VERSION 3.14)
 
 project(kitchen_sink VERSION 0.0.1)
 
-add_executable(KitchenSink main.cpp)
+add_executable(kitchen_sink main.cpp)
+
+target_link_libraries(kitchen_sink daisy)
+target_link_libraries(kitchen_sink DaisySP)
+target_link_libraries(kitchen_sink DaisySP_LGPL)
+target_link_libraries(kitchen_sink ccam_json)
